PostGIS 2.5.3
2019/XX/XX

 * Bug fixes *

  - #4348, ST_AsMVTGeom (GEOS): Enforce validation at all times (Raúl Marín)
  - #4361, Fix postgis_type_name with (GEOMETRYM,3) (Matt Bretl)
  - #4326, Fix circular arc distance calculation (Paul Ramsey)
  - #4380, Simple TIN support to allow viz in QGIS (Paul Ramsey)


PostGIS 2.5.2
2019/03/11

 * Bug fixes *

  - #4231, Support for PostgreSQL 12dev (remove use of pg_constraint.consrc)
           (Regina Obe, Laurenz Albe)
  - #4247, Avoid undefined behaviour in next_float functions (Raúl Marín)
  - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)
  - #4246, Fix undefined behaviour in ST_3DDistance (Raúl Marín)
  - #4244, Avoid unaligned memory access in BOX2D_out (Raúl Marín)
  - #4139, Make mixed-dimension ND index build tree correctly.
  WARNING: REINDEX your ND index on tables that have records with different M/Z
           dimensions for &&& operator to work predictably.
           (Darafei Praliaskouski, Arthur Lesuisse, Andrew Gierth, Raúl Marín)
  - #4262, Document MULTISURFACE compatibility of ST_LineToCurve (Steven Ottens)
  - #4267, Enable Proj 6 deprecated APIs (Darafei Praliaskouski, Raúl Marín)
  - #4276, ST_AsGeoJSON documentation refresh (Darafei Praliaskouski)￼
  - #4273, Tighter parsing of WKT (Paul Ramsey)
  - #4292, ST_AsMVT: parse JSON numeric values with decimals as doubles (Raúl Marín)
  - #4300, ST_AsMVTGeom: Always return the simplest geometry (Raúl Marín)
  - #4301, ST_Subdivide: fix endless loop on coordinates near coincident to bounds
           (Darafei Praliaskouski)
  - #4261, Use AccessShareLock in spatial_index_read_extent (Paul Ramsey)
  - #4289, ST_AsMVTGeom: Transform coordinates space before clipping (Raúl Marín)
  - #4275, Avoid passing a NULL pointer to GEOSisEmpty (Raúl Marín)
  - #4296, Use `server_version_num` instead of parsing `version()` (Raúl Marín)
  - #4290, More robust geography distance (Paul Ramsey)